--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780383.md#1" target="_blank">【新闻看点】美杀苏莱曼尼 陆民赞：让领导先走</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780383.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/191006-N-VI515-0396-600x400-1-150x120.jpg" align ="left"></a>美国精准点杀伊朗二号人物、被联合国列为恐怖分子的苏莱曼尼（Qassem Soleimani），不少网友称之为“让领导先走”，纷纷称赞川普政府“替天行道”、“大快人心”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 5:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779864.md#1" target="_blank">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/309034826938-150x120.jpg" align ="left"></a>近日江苏政府声称年底脱贫率已经超过99.99%，仅有17人未脱贫，此精准数字遭民间极大质疑，有大陆媒体人认为即使达到官方的脱贫数字，其实也摆脱不了贫困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 10:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11778504.md#1" target="_blank">【拍案惊奇】危机未完全解除 美伊冲突内幕</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11778504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Baghdad_-_airport_and_green_zone-1-150x120.jpg" align ="left"></a>一场迫在眉睫的战争，随时可能爆发。这种危机感一直持续到今天中午，美国总统川普，向全国发表讲话，才算结束。现在，世界避免了一场美伊战争，但是围绕这次战争危机，还有很多细节，目前越来越多的相关消息出来，我们下面一一来了解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 4:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779091.md#1" target="_blank">北大医学部教授：武汉肺炎人传人可能性大</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779091.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>据大陆专家初步判定，武汉的不明原因肺炎为新型冠状病毒。北京大学医学部基础医学院免疫学系教授王月丹认为，这次疫情人传人的可能性很大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 4:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11790482.md#1" target="_blank">还能承袭经国精神？柯志恩：国民党距民意太远</a><br></h3>国民党深陷败选阴霾，挑战新北第7选区失利的立委柯志恩13日在脸书发文，质疑“国民党还能承袭经国先生的精神吗?”她说，选举已是世代而非统独之争，经国先生“反共不反中”，捍卫民主自由价值，反观今日国民党，无论是路线论述或政策辩护，模糊、虚弱无力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789981.md#1" target="_blank">女孩写不出作文急哭：天天“学习”哪有缤纷世界</a><br></h3>近日，黑龙江双鸭山市民李先生上小学的女儿因写不出命题作文《我眼中的缤纷世界》而放声大哭。她哭诉：“天天学习，哪有缤纷世界。”李先生说，后来想了想很心疼孩子，于是将给孩子报的两门假期补习班取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 4:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789754.md#1" target="_blank">听信偏方 江苏男生吞活黄鳝被送进ICU</a><br></h3>1月9日，江苏省中医院手术室内，当两条长50厘米、粗3厘米的大黄鳝从一名51岁的男性患者结肠里被取出时，众人一片惊叹。原来，该男子听信了生吞黄鳝能治疗便秘的偏方，生吞下两条活黄鳝，最终导致肠道穿孔。目前，该男子仍在重症监护室继续治疗，仍未脱离生命危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 2:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/13/n11789322.md#1" target="_blank">每日三退声明精选（2020/01/12）</a><br></h3>共产党贪腐邪恶，占尽了百姓的所有，还经常生事栽赃陷害无孤善良的民众，小时候被其所骗加入了中国共青团组织。特声明退出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:57 AM							</td></tr>
