--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -9,8 +9,6 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank">疫情扩大 哈尔滨再有13名学生感染布病</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806120829481093-150x120.jpg" align ="left"></a>中国农科院兰州兽医研究所11月下旬爆发布鲁氏菌病（布病），并导致至少96人被感染后，同属中国农科院的哈尔滨兽医研究所再有13名学生感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank">侵大陆并定殖 草地贪夜蛾明年恐进暴发阶段</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/9/n11711924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/GettyImages-954036218-150x120.jpg" align ="left"></a>中共农业农村部称，草地贪夜蛾今年入侵大陆并定殖，明年恐进入爆发阶段，春季向长江流域迁飞的时间会比2019年提前1个月左右，造成的危害预计会比2019年更大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank">阴霾袭华北黄淮 北京等55城发重污染预警</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/9/n11711410.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262611086-150x120.jpg" align ="left"></a>阴霾大面积持续多日笼罩大陆华北、黄淮、江汉等地区，截至12月9日，有55个城市启动重污染天气预警。其中，北京市达“5级重度污染”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/19/n11731701.md#1" target="_blank">四川再发地震 今年至少14次地震</a><br></h3>继12月18日四川内江5.2发生地震后，19日凌晨，四川绵阳再发3级地震，震源深度10千米。今年四川频发地震，加上今次，发生至少14次地震，还有部分余震未算入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/18/n11729434.md#1" target="_blank">四川内江5.2级地震 18人受伤8千户停电</a><br></h3>12月18日早上，四川内江市资中县发生5.2级地震。截至下午2时许，官方称，地震造成18人受伤，其中5人重伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/18/n11729550.md#1" target="_blank">贵州煤矿事故致16死 四川渗水事故致5死</a><br></h3>12月18日，贵州安龙县广隆煤矿瓦斯爆炸搜救工作结束。此次事故，导致16名矿工死亡。而稍早前的四川煤矿渗水事故搜救工作也基本结束，5人死亡，13人获救。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/18/n11729297.md#1" target="_blank">四川内江5.2级地震 周边多地有震感</a><br></h3>中国地震台网正式测定，12月18日早上8时14分，四川内江市资中县（北纬29.59度，东经104.82度）发生5.2级地震，震源深度14千米。暂未传出人员伤亡。震中的网民称吓呆了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/17/n11727202.md#1" target="_blank">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br></h3>12月17日10时后，浙江省丽水市松阳县新兴镇安露源机制砂有限公司矿山突然塌方，2000余平方米厂房被掩埋，导致3人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:39 PM							</td></tr>
@@ -35,5 +33,7 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/9/n11710988.md#1" target="_blank">四川绵阳4.6级地震 成都德阳震感强烈</a><br></h3>四川省绵阳市安州区9日下午发生4.6级地震。地震发生后，大量网民发帖表示有震感，“成都震感强烈”、“西科大（绵阳西南科技大学）震感强烈”“德阳震感强烈”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/8/n11708036.md#1" target="_blank">京津冀多地持续阴霾天 航班高速路均受影响</a><br></h3>12月8日，河北南部、北京东南部、河南中东部、山东西北部等地的部分地区因重度阴霾影响，多处高速路段封闭，机场航班也被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/7/n11706911.md#1" target="_blank">遂宁小区疑似一氧化碳中毒事故 2死7住院</a><br></h3>12月8日，四川遂宁市安居区凤凰街道某小区发生一氧化碳中毒事件，导致2死、7人身体不适，已在医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/7/n11707059.md#1" target="_blank">兰州兽研所布鲁氏菌阳性人数增至96人</a><br></h3>目前，中国农业科学院兰州兽医研究所布鲁氏菌阳性人数已增至96人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/6/n11705039.md#1" target="_blank">佛山山火持续24小时 火势随风力加大蔓延</a><br></h3>12月5日13时53分，广东省佛山市高明区荷城街道凌云山发生山火，大火烧了整整一天（24小时），到6日火势扩大，目前火还没有灭并随风力加大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
