--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -27,8 +27,8 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank">澳门实施“安全法” 恐落入中共监控系统</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188813067-1-150x120.jpg" align ="left"></a>澳门主权移交20年，《网络安全法》开始实施。外界关注，鉴于国内省份早已成立“网络斗争指挥中心”，澳门不断向中国大陆看齐、一致，完全内地化，一国两制已不复存在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740279.md#1" target="_blank">冤狱4年再遭迫害 长沙法轮功学员罗丹离世</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-16-150x120.jpg" align ="left"></a>长沙市浏阳市50岁的法轮功学员罗丹在经历了4年的冤狱折磨、捞刀河洗脑班的摧残，以及不断遭受中共不人员的骚扰迫害后，于12月1日含冤离世，留下80岁的老父亲孤身一人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank">程晓容：上海囚徒求救信再揭中共奴工黑幕</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/2019-5-21-fox-11-program_08-ss-150x120.jpg" align ="left"></a>求救信见诸媒体的同一天，卡片销售商、英国最大零售商乐购（Tesco）迅速做出回应，宣布暂时停止在中国的一家工厂的生产，并展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11739348.md#1" target="_blank">【拍案惊奇】《愿荣光归香港》全新台语歌词</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11739348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2dc2847003ef2_ttl7daypA5_20191222-____-____-150x120.jpg" align ="left"></a>《新闻拍案惊奇》获授权独家首发：《愿荣光归香港》全新台语歌词、CSM重唱团“六重唱”台语演唱，台湾知名“音乐制作人J”台北录制！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/22/n11739179.md#1" target="_blank">动荡中过冬 港警中环实枪指市民</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/22/n11739179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/WhatsApp-Image-2019-12-23-at-5.10.01-AM_cut-150x120.jpeg" align ="left"></a>12月22日是中华传统二十四节气中的“冬至”，尽管过去半年香港抗争运动如火如荼，不过这一天港人也放下纷争，希望和家人团圆度节。但大批港警却在下午中环一个人权集会上冲入会场，当中有警员擎枪指向在场人士，并发射催泪弹驱散，场面混乱。附近的IFC商场也提早拉闸，令市民无法和家人轻松度节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11751457.md#1" target="_blank">曾陷冤狱7年 法轮功学员赵吉元再遭冤判</a><br></h3>曾陷冤狱7年的辽宁省沈阳市大东区法轮功学员赵吉元，于7月10日再度被绑架，近日被沈阳市和平区法院非法判刑7年半。赵吉元已上诉到中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747235.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br></h3>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留的及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11744898.md#1" target="_blank">河南一公示名单泄露3260人身份证号码</a><br></h3>去年，中共河南省信阳市商城县民政局在公示名单时，将3千多位民众完整的身份证号码泄露出去。当被质问是否泄露公民隐私时，当局工作人员称这个不算是泄露隐私。此事引起网民热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740664.md#1" target="_blank">法轮功学员孙凤华遭绑架命危 数月后离世</a><br></h3>哈尔滨市法轮功学员孙凤华于9月11日被哈尔滨市铁路公安局直属派出所警察绑架，当时血压高达240，出现生命危险。第二天警察通知家属把她接走。回家3个月后，她于12月9日离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
